Tikiwiki Changelog
------------------
$Header: /cvsroot/tikiwiki/tiki/changelog.txt,v 1.114 2003-10-10 11:04:02 traivor Exp $

All developers are invited to add relevant changes in that file as they
apply them to the CVS source. You can optionnaly indicate an identifer
for the origin of the change (author, submitter, anyone involved) but
it's not so useful as the cvs log knows who adds what when.

Use the following tags to distinguish changes :
* [NEW] apply to something new added in tikiwiki
* [MOD] is an enhancement, not really new but make things come easier
* [FIX] can be used for bug fixes of any sort

Please wrap your lines to 80 characters and indent them with spaces only.
------------------

Version 1.8 --
<http://tikiwiki.org/ReleaseProcess18>

* [MOD] Improved thread display of comments
* [NEW] newsletter enhancements - per newsletter determine whether users can
  subscribe, whether the address must be validated, and whether to include an
  unsubscribe msg when a newsletter is sent. Removed frequency as unused.
* [NEW] plugin for automatic link building of sourceforge tracker items
  using {SF(aid=>xxxxxx)}{SF}
* [NEW] Editable dynamic variables can be added to tiki objects using %name%.
  This allows quick editing and displaying of short information in wiki pages
  and other objects.
* [NEW] Last n messages posted in a forum can be displayed when listing forum
  topics to provide a quick access to the last posts in the forum regardless if
  they are new topics or replies to an existing thread. This is optional and the
  number of post titles to display can be configured.
* [NEW] Wiki pages can be cached or not cached individually, this setting
  overrides the global setting for caching wiki pages. (Allows to have all pages
  cached but one or no pages cached but some, refresh times can differ too)
* [NEW] Events added, now articles can be normal articles, reviews or events
* [FIX] article topics no longer require an image file to be uploaded