@@ -3499,6 +3499,13 @@ INSERT IGNORE INTO tiki_preferences(name,value) VALUES ('art_list_reads','y');
 INSERT IGNORE INTO tiki_preferences(name,value) VALUES ('art_list_size','y');
 INSERT IGNORE INTO tiki_preferences(name,value) VALUES ('art_list_title','y');
 INSERT IGNORE INTO tiki_preferences(name,value) VALUES ('art_list_topic','y');
+INSERT IGNORE INTO tiki_preferences(name,value) VALUES ('art_view_author','y');
+INSERT IGNORE INTO tiki_preferences(name,value) VALUES ('art_view_date','y');
+INSERT IGNORE INTO tiki_preferences(name,value) VALUES ('art_view_img','y');
+INSERT IGNORE INTO tiki_preferences(name,value) VALUES ('art_view_reads','y');
+INSERT IGNORE INTO tiki_preferences(name,value) VALUES ('art_view_size','y');
+INSERT IGNORE INTO tiki_preferences(name,value) VALUES ('art_view_title','y');
+INSERT IGNORE INTO tiki_preferences(name,value) VALUES ('art_view_topic','y');
 INSERT IGNORE INTO tiki_preferences(name,value) VALUES ('auth_create_user_auth','n');
 INSERT IGNORE INTO tiki_preferences(name,value) VALUES ('auth_create_user_tiki','n');
 INSERT IGNORE INTO tiki_preferences(name,value) VALUES ('auth_ldap_adminpass','');
